<resources>
    <string name="app_name">Ristorante</string>
    <string name="bibite">Bibite</string>
    <string name="todo">Todo</string>
    <string name="dolci">Dolci</string>
    <string name="pizze">Pizze</string>
    <string name="primi">Primi</string>
    <string name="secondi">Secondi</string>
    <string name="paga">Paga</string>
    <string name="aiuto">Aiuto</string>
    <string name="invia">Invia</string>
    <string name="benvenuto">Benvenuto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="figlio">Figlio</string>
    <string name="inizia_ad_ordinare">Inizia ad ordinare</string>
    <string name="ordina">clicca qui per ordinare</string>
    <string name="seleziona_la_lingua">Seleziona la lingua</string>
    <string name="fragment_invio_ordini">Fragment invio ordini</string>
    <string name="fragment_pagamento">Fragment pagamento</string>
    <string name="quantita">Quantita</string>
    <string name="prezzo">Prezzo €</string>
    <string name="descrizione">Descrizione</string>
    <string name="nome">Nome</string>
</resources>
