<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <TextView
            android:text="@string/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textNome"
            android:textSize="18sp"
            android:textAlignment="center" android:layout_marginStart="156dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textQuantita" app:layout_constraintVertical_bias="0.111"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/image" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/descrizione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textDescrizione" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textNome" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.136" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/num" app:layout_constraintVertical_bias="0.154"/>
    <TextView
            android:text="@string/prezzo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPrezzo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.435"
            app:layout_constraintVertical_bias="0.505"/>
    <TextView
            android:text="@string/quantita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textQuantita" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="260dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/image" app:layout_constraintEnd_toStartOf="@+id/num"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.844"/>
    <EditText
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/num" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textQuantita"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.903"
            android:singleLine="true" android:autofillHints="" tools:ignore="LabelFor"/>
</android.support.constraint.ConstraintLayout>